src/test/ui/const-generics/slice-const-param-mismatch.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/slice-const-param-mismatch.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0308]: mismatched types
  --> $DIR/slice-const-param-mismatch.rs:8:35
   |
LL |     let _: ConstString<"Hello"> = ConstString::<"World">;
   |                                   ^^^^^^^^^^^^^^^^^^^^^^ expected `"Hello"`, found `"World"`
   |
   = note: expected type `ConstString<>`
              found type `ConstString<>`

error[E0308]: mismatched types
  --> $DIR/slice-const-param-mismatch.rs:10:33
   |
LL |     let _: ConstBytes<b"AAA"> = ConstBytes::<b"BBB">;
   |                                 ^^^^^^^^^^^^^^^^^^^^ expected `b"AAA"`, found `b"BBB"`
   |
   = note: expected type `ConstBytes<>`
              found type `ConstBytes<>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
